K8s/result/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: result
  ports:
  - port: 8081
    targetPort: 8081
